[fix] 아이템 수정 시 기존에 알람이 없다면 새로 생성하도록 수정